Add support for setting static final fields on JDK12+